--- a/src/components/WhatsAppButton.module.css
+++ b/src/components/WhatsAppButton.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 2rem;
   right: 2rem;
-  z-index: 900;
+  z-index: 2900;
   width: 56px;
   height: 56px;
   background: #25D366;
